rabbitmq-management-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management
  labels:
    app.kubernetes.io/component: rabbitmq
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/part-of: rabbitmq
spec:
  selector:
    app.kubernetes.io/name: rabbitmq
  ports:
  - appProtocol: http
    name: management
    port: 15672
    protocol: TCP
    targetPort: 15672
  type: NodePort
